--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,15 @@ subprojects {
     }
 
 }
+
+project(':Service_A1'){
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    }
+}
+project(':Service_A1'){
+    dependencies {
+
+    }
+}
