ConfigServer local file system 사용

--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -14,5 +14,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #Config
-spring.application.name=licensingservice
+spring.application.name=Service_A1
 spring.profiles.active=default
+spring.config.import=optional:configserver:http://localhost:8888
+
+#
+management.endpoints.web.exposure.include=*
