--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=8888
 
 ## Config-server
 spring.application.name=configserver
-spring.cloud.config.server.encrypt.enabled=false
+
+#???? ??? ?? ? ??? ??
+#spring.cloud.config.server.encrypt.enabled=false
 
 ## Local base
 #spring.profiles.active=native
