--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 spring.application.name=configserver
 
 #???? ??? ?? ? ??? ??
-#spring.cloud.config.server.encrypt.enabled=false
+spring.cloud.config.server.encrypt.enabled=false
 
 ## Local base
 #spring.profiles.active=native
