--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 #
 management.endpoints.web.exposure.include=*
+encrypt.key=IMSYMMETRIC
