--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 server.port=8081
+management.endpoint.health.show-details=always
+
+#h2
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.datasource.hikari.username=sa
+spring.h2.console.enabled=true
+
+#JPA Query setting
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#Config
+spring.application.name=Service_B1
+spring.profiles.active=default
+spring.config.import=optional:configserver:http://localhost:8888
+
+#
+management.endpoints.web.exposure.include=*
+encrypt.key=IMSYMMETRIC
