--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.cloud.config.server.encrypt.enabled=false
 
 ## Git base
 spring.cloud.config.server.git.uri=https://github.com/Cheol-Soon-Choi/config-repo
+
+#Eureka
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
