--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8761
+spring.application.name=EurekaServer
 
-#??? ???? ?? ??? ??
 eureka.client.register-with-eureka=false
-#????? ??? ??? ??
 eureka.client.fetch-registry=false
-#??? ??? ?? ? ??? ?? ??
 eureka.server.wait-time-in-ms-when-sync-empty=5
 eureka.client.service-url.defaultZone=http://localhost:8761
