--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.config.import=optional:configserver:http://localhost:8888
 #
 management.endpoints.web.exposure.include=*
 encrypt.key=IMSYMMETRIC
+
+#Eureka
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
