--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ project(':Service_A1') {
         implementation 'org.springframework.cloud:spring-cloud-config-client'
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.security:spring-security-rsa'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     }
 }
 project(':Service_B1') {
@@ -72,6 +73,7 @@ project(':Service_B1') {
         implementation 'org.springframework.cloud:spring-cloud-config-client'
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.security:spring-security-rsa'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     }
 }
 
@@ -79,6 +81,7 @@ project(':ConfigServer') {
     dependencies {
         implementation 'org.springframework.cloud:spring-cloud-config-server'
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     }
 }
