서비스 검색 테스트

--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #Config
-spring.application.name=Service_A1
+spring.application.name=ServiceA1
 spring.profiles.active=default
 spring.config.import=optional:configserver:http://localhost:8888
 
@@ -27,3 +27,4 @@ eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.disable-delta=true
