--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.application.name=EurekaServer
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.wait-time-in-ms-when-sync-empty=5
-eureka.client.service-url.defaultZone=http://localhost:8761
+#eureka.client.service-url.defaultZone=http://localhost:8761
