--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -14,10 +14,17 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #Config
-spring.application.name=Service_B1
+spring.application.name=ServiceB1
 spring.profiles.active=default
 spring.config.import=optional:configserver:http://localhost:8888
 
 #
 management.endpoints.web.exposure.include=*
 encrypt.key=IMSYMMETRIC
+
+#Eureka
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.disable-delta=true
