--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ project(':Service_A1') {
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.security:spring-security-rsa'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     }
 }
 project(':Service_B1') {
@@ -74,6 +75,7 @@ project(':Service_B1') {
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.security:spring-security-rsa'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     }
 }
 
