--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ project(':Service_A1') {
         implementation 'org.springframework.security:spring-security-rsa'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
         implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE'
     }
 }
 project(':Service_B1') {
@@ -76,6 +77,7 @@ project(':Service_B1') {
         implementation 'org.springframework.security:spring-security-rsa'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
         implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE'
     }
 }
 
