프로퍼티 변경

--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #Config
 spring.application.name=ServiceA1
 spring.profiles.active=default
-spring.config.import=optional:configserver:http://localhost:8888
+#spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.uri=http://localhost:8888
 
 #
 management.endpoints.web.exposure.include=*
