--- a/ZuulServer/src/main/resources/application.properties
+++ b/ZuulServer/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=5555
 #Config
 spring.application.name=ZuulServer
 spring.profiles.active=default
-spring.config.import=optional:configserver:http://localhost:8888
+ #boot 2.4.x
+#spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.uri=http://localhost:8888
 
 #Eureka
 eureka.instance.prefer-ip-address=true
