--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -29,3 +29,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.disable-delta=true
+
+#log
+logging.level.com.netflix=debug
+logging.level.org.springframework.web=debug
+logging.level.com.ccs=debug
