--- a/ZuulServer/src/main/resources/application.properties
+++ b/ZuulServer/src/main/resources/application.properties
@@ -15,3 +15,11 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.disable-delta=true
 
 management.endpoints.web.exposure.include=*
+
+#log
+logging.level.com.netflix=warn
+logging.level.org.springframework.web=warn
+logging.level.org.springframework.cloud.netflix=trace
+logging.level.com.ccs=debug
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2500
