--- a/build.gradle
+++ b/build.gradle
@@ -125,3 +125,15 @@ project(':Service_B1_New') {
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
     }
 }
+
+project(':AuthServer') {
+    dependencies {
+        implementation 'org.springframework.cloud:spring-cloud-config-client'
+        implementation 'org.springframework.cloud:spring-cloud-starter-config'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-security'
+        implementation 'org.springframework.security:spring-security-rsa'
+        implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
+    }
+}
