--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -34,3 +34,6 @@ eureka.client.disable-delta=true
 logging.level.com.netflix=warn
 logging.level.org.springframework.web=warn
 logging.level.com.ccs=debug
+
+#Security
+security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
