--- a/ZuulServer/src/main/resources/application.properties
+++ b/ZuulServer/src/main/resources/application.properties
@@ -22,4 +22,6 @@ logging.level.org.springframework.web=warn
 logging.level.org.springframework.cloud.netflix=trace
 logging.level.com.ccs=debug
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2500
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2500
+
+zuul.sensitive-headers=
