--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,10 @@ project(':Service_A1') {
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-security:2.0.0.RELEASE'
+        implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
+
+//        implementation 'org.springframework.security:spring-security-jwt'
     }
 }
 project(':Service_B1') {
@@ -78,6 +82,9 @@ project(':Service_B1') {
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-security:2.0.0.RELEASE'
+        implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
+//        implementation 'org.springframework.security:spring-security-jwt'
     }
 }
 
@@ -103,6 +110,8 @@ project(':ZuulServer') {
         implementation 'org.springframework.cloud:spring-cloud-config-client'
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
+//        implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
     }
 }
 
@@ -132,8 +141,8 @@ project(':AuthServer') {
         implementation 'org.springframework.cloud:spring-cloud-starter-config'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
-        implementation 'org.springframework.cloud:spring-cloud-security'
+        implementation 'org.springframework.cloud:spring-cloud-security:2.0.0.RELEASE'
         implementation 'org.springframework.security:spring-security-rsa'
-        implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
+        implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
     }
 }
