SerivceB1 스프링클라우드스트림 + kafka 설정

--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -37,3 +37,9 @@ logging.level.com.ccs=debug
 
 #Security
 security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
+
+#cloud-Stream + kafKa
+#mappinf output channel and orChangeTopic message broker
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.brokers=localhost
