SerivceA1 스프링클라우드스트림 + kafka 설정(수신)

--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -37,3 +37,10 @@ logging.level.com.ccs=debug
 
 #Security
 security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
+
+#cloud-Stream + kafKa
+#mappinf input channel and orChangeTopic message broker
+spring.cloud.stream.bindings.input.destination=orgChangeTopic
+spring.cloud.stream.bindings.input.content-type=application/json
+spring.cloud.stream.bindings.input.group=ServiceA1Group
+spring.cloud.stream.kafka.binder.brokers=localhost
