--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ project(':Service_A1') {
         implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.5.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-security:2.0.0.RELEASE'
         implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-stream:2.0.0.RELEASE'
+        implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.0.0.RELEASE'
     }
 }
 project(':Service_B1') {
