--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -39,7 +39,7 @@ logging.level.com.ccs=debug
 security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 
 #cloud-Stream + kafKa
-#mappinf output channel and orChangeTopic message broker
+#mapping output channel and orChangeTopic message broker
 spring.cloud.stream.bindings.output.destination=orgChangeTopic
 spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.brokers=localhost
