--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ project(':Service_A1') {
         implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-stream:3.0.8.RELEASE'
         implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:3.0.8.RELEASE'
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.4.RELEASE'
     }
 }
 project(':Service_B1') {
