--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -40,7 +40,7 @@ security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 
 #cloud-Stream + kafKa
 #mappinf input channel and orChangeTopic message broker
-spring.cloud.stream.bindings.input.destination=orgChangeTopic
-spring.cloud.stream.bindings.input.content-type=application/json
-spring.cloud.stream.bindings.input.group=ServiceA1Group
+spring.cloud.stream.bindings.inboundOrgChanges.destination=orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type=application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group=ServiceA1Group
 spring.cloud.stream.kafka.binder.brokers=localhost
