--- a/Service_A1/src/main/resources/application.properties
+++ b/Service_A1/src/main/resources/application.properties
@@ -44,3 +44,6 @@ spring.cloud.stream.bindings.inboundOrgChanges.destination=orgChangeTopic
 spring.cloud.stream.bindings.inboundOrgChanges.content-type=application/json
 spring.cloud.stream.bindings.inboundOrgChanges.group=ServiceA1Group
 spring.cloud.stream.kafka.binder.brokers=localhost
+
+#zipkin
+spring.zipkin.base-url=localhost:9411
