--- a/ZuulServer/src/main/resources/application.properties
+++ b/ZuulServer/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.springframework.cloud.netflix=trace
 logging.level.com.ccs=debug
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2500
+
+#zipkin
+spring.zipkin.base-url=localhost:9411
