--- a/Service_B1/src/main/resources/application.properties
+++ b/Service_B1/src/main/resources/application.properties
@@ -43,3 +43,6 @@ security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 spring.cloud.stream.bindings.output.destination=orgChangeTopic
 spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.brokers=localhost
+
+#zipkin
+spring.zipkin.base-url=localhost:9411
